--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins in here
+.circle() {
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: lightskyblue;
+    width: 50%;
+    height: 30px;
+    padding: 10PX;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
