--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+nav{
+    float: left;
+    margin: 0;
+    overflow:hidden;
+    text-align: center;
+  }
+  
+  nav ul{
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li{
+    display: inline-block;
+    
+    list-style-type: none;  
+    padding-top: 10px;
+    padding-left: 100px;
+  }
+    
+  
+  
