--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,23 +1,26 @@
-// Navigation Styles here
-nav{
-    float: left;
-    margin: 0;
-    overflow:hidden;
-    text-align: center;
-  }
-  
-  nav ul{
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li{
-    display: inline-block;
-    
-    list-style-type: none;  
-    padding-top: 10px;
-    padding-left: 100px;
-  }
-    
-  
-  
+nav {
+  float: left;
+  margin: 0;
+  overflow: hidden;
+  text-align: center;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav ul li {
+  display: inline-block;
+  list-style-type: none;
+  padding-top: 10px;
+  padding-left: 100px;
+
+}
+.logo p {
+  float: left;
+  position: relative;
+  margin: 10px 15px 15px 10px;
+}
+.content-pick {
+  display: flex;
+  flex-direction: column;
+}
