--- a/less/variables.less
+++ b/less/variables.less
@@ -1,48 +1,32 @@
 
-// Color assignments 
-@mobile (max-width: 500px) {
-    nav{
-        float: left;
-        margin: 0;
-        overflow:hidden;
-        text-align: center;
-      }
-      
-      nav ul{
-        margin: 0;
-        padding: 0;
-      }
-      
-      nav ul li{
-        display: inline-block;
-        
-        list-style-type: none;  
-        padding-top: 10px;
-        padding-left: 100px;
-      }
-      .logo p{
-        float: left;
-        position: relative;
-        margin: 10px 15px 15px 10px;
-      }
-      .content-pick {
-        display: flex;
-        flex-direction: column;
-      }
-    }
 
-
+// Color assignments
 
 @font-color: @shark;
+
 @button-bg: @eastern-blue;
-@main-bg:  @white;
+
+@main-bg: @white;
+
 @navigation-border: @silver;
+
 @footer-bg: @sandy-beach;
 
+​
+
 // Colors
-@white: #FFFFFF;
-@silver: #C0C0C0;
+
+@white: #ffffff;
+
+@silver: #c0c0c0;
+
 @shark: #212529;
-@eastern-blue: #17A2B8;
-@sandy-beach: #FFEBCD;
-}
+
+@eastern-blue: #17a2b8;
+
+@sandy-beach: #ffebcd;
+
+​
+
+@mobile: ~"(max-width: 500px)";
+
